--- a/index.html
+++ b/index.html
@@ -80,13 +80,12 @@
         </div>
         <div class="blog-img">
             <div class="design10">
-                <div class="design10-img">
-                    <img src="images/blog1.jpg" alt="">
+                 <div class="design10-img">
+                    <img src="images/blog2.jpg" alt="">
                 </div>
                 <div class="design10-text">
-                    <h3>HTML defines six levels of headings.</h3>
-                    <p>The heading elements are H1, H2, H3, H4, H5, and H6 with H1 being the highest (or most important) level and H6 the least. </p>
-                    
+                    <h3>Word Wrapping</h3>
+                    <p>User agents are free to wrap lines at whitespace characters so as to ensure lines fit within the current window size. </p>
                 </div>
             </div>
             <div class="design10">
@@ -99,13 +98,12 @@
                 </div>
             </div>
             <div class="design10">
-                <div class="design10-img">
-                    <img src="images/blog3.jpg" alt="">
-
+                 <div class="design10-img">
+                    <img src="images/blog2.jpg" alt="">
                 </div>
                 <div class="design10-text">
-                    <h3>Permitted Attributes</h3>
-                    <p>An SGML identifier used as the target for hypertext links or for naming particular elements in associated style sheets.</p>
+                    <h3>Word Wrapping</h3>
+                    <p>User agents are free to wrap lines at whitespace characters so as to ensure lines fit within the current window size. </p>
                 </div>
             </div>
         </div>
